k8s/utils/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: taskflow
  namespace: taskflow

spec:

  ingressClassName: nginx

  rules:

    - host: taskflow.local

      http:

        paths:

          - path: /api
            pathType: Prefix

            backend:

              service:
                name: backend-service
                port:
                  number: 3000

          - path: /
            pathType: Prefix

            backend:

              service:
                name: frontend-service
                port:
                  number: 80
